# business-planner

./: .cursorrules  .env.example  .gitignore  CLAUDE_CONTEXT.md  Dockerfile  Makefile  NEW_SESSION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  SECURITY_INCIDENT.md  SESSION_COMPLETE.md  SESSION_SUMMARY_FINAL.md  START_HERE.md  SUMMARY.md  TEAM_UPDATE.md  TODAYS_PROGRESS.md  UPDATES.md  deploy_clean.sh  docker-compose.prod.yml  docker-compose.yml  install_and_run.sh  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.minimal.txt  requirements.txt  setup_env.py  test_gpt5_nano.py
.claude/: settings.local.json
docs/: 00-project-brief.md  BUSINESS_DETECTION_RULES.md  EXECUTOR_ASSIGNMENT_LOGIC.md  PROMPT_OPTIMIZATION.md  TEAM.md  TESTING_GUIDE.md  TRANSCRIPT_DISPLAY.md
docs/01-architecture/adr/: 001-langraph.md  002-gpt5-nano.md  003-business-isolation.md  004-rag-strategy.md  005-postgresql-pgvector.md  006-digital-ocean-droplet.md  007-telegram-architecture.md
docs/02-database/: er-diagram.md  indexes-strategy.md  schema.sql  seed-data.sql
docs/02-database/migrations/: README.md
docs/03-api/: openapi.yaml  pydantic-models.md  telegram-commands.md
docs/04-domain/: bounded-contexts.md  business-rules.md  entities.md  events.md  value-objects.md
docs/05-ai-specifications/: langgraph-flows.md  models-config.md
docs/05-ai-specifications/prompts/: task-parser.md  time-estimator.md  weekly-analytics.md
docs/07-testing/: testing-strategy.md
docs/08-infrastructure/: digital-ocean-architecture.md
docs/08-infrastructure/ci-cd/: github-actions-spec.md
docs/08-infrastructure/docker/: docker-spec.md
docs/08-infrastructure/monitoring/: monitoring-strategy.md
docs/08-infrastructure/security/: security-strategy.md
docs/08-infrastructure/terraform/: terraform-spec.md
docs/BUGS/: DEADLINE_TYPEDDICT_BUG.md
docs/archive/: FINAL_STEPS.md  SETUP_API_KEYS.md
docs/archive/planning/: PROJECT_PLAN.md
docs/archive/sessions/: PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  TELEGRAM_BOT_READY.md
docs/deployment/: DEPLOY.md
frontend/: .env.production  README.md  index.html  package-lock.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  tasks.ts
frontend/src/components/: Header.tsx
frontend/src/pages/: BusinessTasks.tsx  Dashboard.tsx
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
migrations/: add_completed_at_to_existing_tasks.sql
planning/: GETTING_STARTED.md  SPEC_CHECKLIST.md  STATUS.md
scripts/: init_db.py
src/: README.md  __init__.py  config.py  main.py
src/ai/: __init__.py
src/ai/graphs/: voice_task_creation.py
src/ai/parsers/: task_parser.py
src/ai/rag/: embeddings.py  retriever.py
src/api/: __init__.py
src/api/routes/: __init__.py  system.py  tasks.py  telegram.py
src/domain/: __init__.py  constants.py
src/domain/models/: __init__.py  business.py  enums.py  member.py  project.py  task.py  user.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  connection.py  models.py
src/infrastructure/database/repositories/: task_repository.py
src/services/: __init__.py  daily_summary.py  evening_summary.py  scheduler.py
src/telegram/: __init__.py  bot.py
src/telegram/handlers/: __init__.py  callback_handler.py  command_handler.py  error_handler.py  message_handler.py  voice_handler.py
src/utils/: __init__.py  logger.py
tests/: .env.test  __init__.py  conftest.py
tests/integration/: test_deadline_parsing.py
tests/unit/: test_format_response.py  test_task_parser.py  test_task_repository.py
